# TokoVOIP_TS3

./: .editorconfig  .gitignore  .gitmodules  LICENSE.md  README.md  tokovoip.cpp  ts.nightliferp.dk:9987
fivem_script/: README.md
fivem_script/tokovoip_script/: LICENSE.md  __resource.lua  c_config.lua  fxmanifest.lua  s_config.lua
fivem_script/tokovoip_script/nui/: index.html  script.js
fivem_script/tokovoip_script/src/: c_TokoVoip.lua  c_main.lua  c_utils.lua  nuiProxy.js  s_main.lua  s_utils.lua
handshake_server/: config.ts  index.ts  package-lock.json  package.json  tsconfig.json
master_server/: Dockerfile  README.md  docker-compose.yml  index.js  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  version.json
project/: .gitignore  CMakeLists.txt  radiofx.qrc
project/include/: client_ws.hpp  server_ws.hpp  ts3_functions.h
project/include/teamspeak/: public_rare_definitions.h
project/misc/: walkie_talkie.pdn
project/src/: config_radio.cpp  config_radio.ui  config_radio_groupbox.cpp  config_radio_groupbox.h  dsp_radio.h  mod_radio.cpp  mod_radio.h  plugin.cpp  plugin.h  plugin_qt.cpp  plugin_tokovoip.sln  settings_radio.cpp  settings_radio.h  sol.hpp  test_plugin.VC.VC.opendb  test_plugin.vcxproj  test_plugin.vcxproj.filters  tokovoip.cpp  tokovoip.h  translator.cpp  translator.h
script/tokovoip_script/: README.md  __resource.lua  c_TokoVoip.lua  c_main.lua  c_utils.lua  s_main.lua  s_utils.lua
script/tokovoip_script/client/: TokoVoip.lua  client.lua  utils.lua
script/tokovoip_script/client/html/: index.html  script.js
script/tokovoip_script/nui/: index.html  script.js
script/tokovoip_script/server/: server.lua
script/tokovoip_script/src/: c_TokoVoip.lua  c_main.lua  c_utils.lua  s_main.lua  s_utils.lua
ts3_package/: package.ini  plugins.ts3_plugin  tokovoip.ts3_plugin  tokovoip_1_0_7.ts3_plugin  tokovoip_1_0_8.ts3_plugin  tokovoip_1_1_3_pre.ts3_plugin  tokovoip_1_1_4_pre.ts3_plugin  tokovoip_1_1_6.ts3_plugin  tokovoip_1_2_0.ts3_plugin  tokovopi_1_1_4_pre.ts3_plugin
ts3_plugin/: .gitmodules  CMakeLists.txt
ts3_plugin/res/: package.ini  radiofx_de_DE.qm
ts3_plugin/src/: config_radio.h  config_radio_groupbox.ui  dsp_radio.cpp  mod_radio.cpp  plugin.cpp  plugin.h  plugin_qt.cpp  plugin_qt.h  settings_radio.cpp  tokovoip.cpp  tokovoip.h
ws_server/: Dockerfile  README.md  config.js  config.json  docker-compose.yml  fxmanifest.lua  index.js  index.mjs  package-lock.json  package.json  pnpm-lock.yaml
